--- a/code/server/templates/index.html
+++ b/code/server/templates/index.html
@@ -12,7 +12,7 @@
 <div class="container">
     <div class="flex flex-col items-center h-screen w-screen">
         <div class="flex flex-col items-center justify-center">
-            <h1 class="text-5xl font-bold mt-20">Document AI</h1>
+            <h1 class="text-5xl font-bold mt-20">智能计算反应堆 AI</h1>
             <p class="text-xl my-10">一个基于本地知识库的AI</p>
         </div>
         <div class="flex flex-row items-center justify-center w-full">
